Testing out some things

--- a/play.html
+++ b/play.html
@@ -52,4 +52,16 @@
         <h5 class = "name MARY">MARY.</h5>
         <p class = "speech">Only once--when I left home; he disapproved, too.</p> 
 
+        <hr>
+        <table >
+			<tr>
+				<th>Character</th><th>Actor</th><th>Understudy</th>
+			</tr>
+			<tr>
+				<td>OLLIVANT</td><td>Eva Mendes</td><td>$ Emma Stone</td>
+			</tr>
+		</table>
+
+</html>
+
     </body>
