Updated gs, play, and seconact files

--- a/play.html
+++ b/play.html
@@ -61,6 +61,9 @@
 				<td>OLLIVANT</td><td>Eva Mendes</td><td> Emma Stone</td>
 			</tr>
 		</table>
+        <hr>
+		<a href="secondact.html">Take Me to secondact</a>
+		<hr>
 
 </html>
 
