--- a/secondact.html
+++ b/secondact.html
@@ -31,7 +31,7 @@
         <p class="speech">
             Not yet--to speak of.</p>
 
-        <h4 class = "name OLLIVANT">OLLIVANT.</h4>
+        <h4 class = "name EMILY">EMILY.</h4>
         <P class="direction">[_Quietly._]</P>
         <p class="speech">
             But he's promised to pay his father back, Mary.</p>
