added image into secondact,updated other files

--- a/play.html
+++ b/play.html
@@ -64,6 +64,10 @@
         <hr>
 		<a href="secondact.html">Take Me to secondact</a>
 		<hr>
+		<ul class="navigator">
+			<li> <a href="play.html">Kinomotography</a> </li>  
+			<li> <a href="secondact.html">The Second Act</a> </li>  
+		</ul>
 
 </html>
 
