--- a/secondact.html
+++ b/secondact.html
@@ -36,6 +36,12 @@
         <p class="speech">
             But he's promised to pay his father back, Mary.</p>
         <hr>
-
 		<a href="play.html">Back to Play</a>
-		<br><hr>
+		<hr>
+        <img src="Cinematography-Sunset.jpg" alt ="Cinematography">
+        <p> SRC: <a href="https://www.premiumbeat.com/blog/filmmaking-tutorials-for-cinematographers/"> Source</a> </p>
+        <hr>
+        <ul class="navigator">
+			<li> <a href="play.html">Kinomotography</a> </li>  
+			<li> <a href="secondact.html">The Second Act</a> </li>  
+		</ul>
